--- a/ccd-businessLogic/pom.xml
+++ b/ccd-businessLogic/pom.xml
@@ -9,6 +9,28 @@
   <packaging>ejb</packaging>
   <build>
         <finalName>${project.artifactId}</finalName>
+        <plugins>
+        	<!-- AspectJ configuration -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.6</version>
+				<configuration>
+					<complianceLevel>1.7</complianceLevel>
+					<source>${java-version}</source>
+            		<target>${java-version}</target>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test-compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+        </plugins>
   </build>
   <dependencies>
   	<dependency>
@@ -21,5 +43,10 @@
   		<version>0.0.1-SNAPSHOT</version>
   		<type>ejb</type>
   	</dependency>
+  	<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.7.4</version>
+	</dependency>
   </dependencies>
 </project>
